--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <h1>Movie Info Search API</h1>
-    <div id="movie">
-      <ul>
-        <li>War of worlds</li>
-      </ul>
-    </div>
+    <div id="movie"></div>
     <script src="movie.js"></script>
   </body>
 </html>
